go/test/e2e/manifests/api-key-secret.yaml
apiVersion: v1
data:
  api-key: c2stcHJvai1MT2I0ckJINU1BenoxX2E0YjJwT1ZLZHRSZ05rdEZrbk5FekVlRWJSN1REX3k0Ni1LSThtWWNDME9BMV9SLU9Bd1F0MW9XM2ZqaVQzQmxia0ZKOS1Mb29qSVMxMndSS3cxcmFOQXdpRWRMd0dBMDd3eHlKZzgyYVJoQ2lldU9qbnVKREplS3dNTFJtanhLQVZSVWNUY2xJUGZJb0E=
kind: Secret
metadata:
  creationTimestamp: null
  name: openai-api-key-secret
  namespace: team-ns
---
